# miniature-spoon

./: Makefile  README.md  pyproject.toml  requirement_firstinstall.txt
best_practices/: RandomDataset.py  SimpleNet.py
bp/: pyvenv.cfg
